--- a/index.html
+++ b/index.html
@@ -13,7 +13,156 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center py-1 my-3 px-5 bg-success-subtle rounded">
+                <div>
+                    <h2>Interactive</h2>
+                    <p>Geometry Genius</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary px-3">Blog</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+       <section>
+        <div class="container"> 
+                <div class="row">
+                  <div class="col-md-3 g-3">
+                    <div class="card">
+                      <img src="images/triangle.png" class="pt-3 card-img-top img-fluid w-50 h-25 mx-auto" alt="...">
+                      <div class="card-body text-center pb-4">
+                        <h5 class="card-title">Triangle</h5>
+                        <p class="card-text">Area (A) = 0.5×b×h</p>
+                        <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="b">
+                            <label for="">cm</label>
+                            </div>
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="h">
+                            <label for="">cm</label>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 g-3">
+                    <div class="card">
+                      <img src="images/rectangle.png" class="pt-3 card-img-top img-fluid w-50 h-25 mx-auto" alt="...">
+                      <div class="card-body text-center pb-4">
+                        <h5 class="card-title">Rectangle</h5>
+                        <p class="card-text">Area (A) = w×l</p>
+                        <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="w">
+                            <label for="">cm</label>
+                            </div>
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="l">
+                            <label for="">cm</label>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 g-3">
+                    <div class="card">
+                      <img src="images/parallelogram.png" class="pt-3 card-img-top img-fluid w-75 h-25 mx-auto" alt="...">
+                      <div class="card-body text-center pb-4">
+                        <h5 class="card-title">Parallelogram</h5>
+                        <p class="card-text">Area (A) = b×h</p>
+                        <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="b">
+                            <label for="">cm</label>
+                            </div>
+                            <div>
+                                <input class="w-75 px-1" type="text" name="" id="" placeholder="h">
+                            <label for="">cm</label>
+                            </div>
+                        </div>
+                        <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 g-3">
+                    <div class="card text-center">
+                        <h3 class="mt-3">Area Calculation</h3>
+                        <hr class="border border-danger border-1 opacity-50">
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 g-3">
+                      <div class="card">
+                        <img src="images/rhombus.png" class="pt-3 card-img-top img-fluid w-50 h-25 mx-auto" alt="...">
+                        <div class="card-body text-center pb-4">
+                          <h5 class="card-title">Rhombus</h5>
+                          <p class="card-text">Area (A) = 0.5×b×h</p>
+                          <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="b">
+                              <label for="">cm</label>
+                              </div>
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="h">
+                              <label for="">cm</label>
+                              </div>
+                          </div>
+                          <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 g-3">
+                      <div class="card">
+                        <img src="images/pentagon.png" class="pt-3 card-img-top img-fluid w-50 h-25 mx-auto" alt="...">
+                        <div class="card-body text-center pb-4">
+                          <h5 class="card-title">Pentagon</h5>
+                          <p class="card-text">Area (A) = w×l</p>
+                          <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="w">
+                              <label for="">cm</label>
+                              </div>
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="l">
+                              <label for="">cm</label>
+                              </div>
+                          </div>
+                          <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 g-3">
+                      <div class="card">
+                        <img src="images/ellipse.png" class="pt-3 card-img-top img-fluid w-75 h-25 mx-auto" alt="...">
+                        <div class="card-body text-center pb-4">
+                          <h5 class="card-title">Ellipse</h5>
+                          <p class="card-text">Area (A) = b×h</p>
+                          <div class="d-flex justify-content-between w-75 mx-auto my-3">
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="b">
+                              <label for="">cm</label>
+                              </div>
+                              <div>
+                                  <input class="w-75 px-1" type="text" name="" id="" placeholder="h">
+                              <label for="">cm</label>
+                              </div>
+                          </div>
+                          <a href="#" class="btn btn-primary w-75 fw-bold ">Calculate</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                           
+        </div>
+       </section>
+    </main>
 
 
     <!-- Bootstrap JS -->
