--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
+                <!-- Triangel -->
                 <div class="col-md-4 g-3">
                   <div class="card">
                     <img
@@ -78,6 +79,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- Rectangular -->
                 <div class="col-md-4 g-3">
                   <div class="card">
                     <img
@@ -122,6 +124,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- Parallelogram -->
                 <div class="col-md-4 g-3">
                   <div class="card">
                     <img
@@ -139,7 +142,7 @@
                             class="w-75 px-1"
                             type="text"
                             name=""
-                            id=""
+                            id="baseInputField-parallelogram"
                             placeholder="b"
                           />
                           <label for="">cm</label>
@@ -149,18 +152,19 @@
                             class="w-75 px-1"
                             type="text"
                             name=""
-                            id=""
+                            id="height-input-field-parallelogram"
                             placeholder="h"
                           />
                           <label for="">cm</label>
                         </div>
                       </div>
-                      <a href="#" class="btn btn-primary w-100 fw-bold"
-                        >Calculate</a
+                      <button id="btn-parallelogram-calculate" class="btn btn-primary w-100 fw-bold"
+                        >Calculate</button
                       >
                     </div>
                   </div>
                 </div>
+                <!-- Rhombus -->
                 <div class="col-md-4 g-3">
                   <div class="card">
                     <img
@@ -170,17 +174,18 @@
                     />
                     <div class="card-body text-center pb-4">
                       <h5 class="card-title">Rhombus</h5>
-                      <p class="card-text">Area (A) = 0.5×b×h</p>
+                      <p class="card-text">Area (A) = 0.5×d<sub>1</sub>×d<sub>2</sub></p>
+                      <p> d <sub>1</sub>=16 cm; d<sub>2</sub>=8 cm;</p>
                       <div
-                        class="d-flex justify-content-between w-75 mx-auto my-3"
+                        class="d-flex justify-content-between mx-auto my-3"
                       >
                         <div>
                           <input
                             class="w-75 px-1"
                             type="text"
                             name=""
-                            id=""
-                            placeholder="b"
+                            id="d1InputField-rhombus"
+                            placeholder="d1 "
                           />
                           <label for="">cm</label>
                         </div>
@@ -189,14 +194,14 @@
                             class="w-75 px-1"
                             type="text"
                             name=""
-                            id=""
-                            placeholder="h"
+                            id="d2InputField-rhombus"
+                            placeholder="d2"
                           />
                           <label for="">cm</label>
                         </div>
                       </div>
-                      <a href="#" class="btn btn-primary w-75 fw-bold"
-                        >Calculate</a
+                      <button id="btn-rhombus-calculate" class="btn btn-primary w-100 fw-bold"
+                        >Calculate</button
                       >
                     </div>
                   </div>
@@ -300,6 +305,24 @@
                   <p id="rectangular-area-show" class="text-start ps-3">
                     2. Rectangular =
                     <span id="rectangular-area"></span> cm<sup>2</sup>
+                    <button class="btn btn-primary ms-2">
+                      Convert to m<sup>2</sup>
+                    </button>
+                  </p>
+                </div>
+                <div class="mt-2">
+                  <p id="parallelogram-area-show" class="text-start ps-3">
+                    3. Parallelogram =
+                    <span id="parallelogram-area"></span> cm<sup>2</sup>
+                    <button class="btn btn-primary ms-2">
+                      Convert to m<sup>2</sup>
+                    </button>
+                  </p>
+                </div>
+                <div class="mt-2">
+                  <p id="rhombus-area-show" class="text-start ps-3">
+                    4. Rhombus =
+                    <span id="rhombus-area"></span> cm<sup>2</sup>
                     <button class="btn btn-primary ms-2">
                       Convert to m<sup>2</sup>
                     </button>
