--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Geometry Genius</p>
           </div>
           <div>
-            <button class="btn btn-primary px-3">Blog</button>
+            <button id="btn-blog" class="btn btn-primary px-3">Blog</button>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8">
-              <div class="row">
+              <div class="row area-container">
                 <!-- Triangel -->
                 <div class="col-md-4 g-3">
                   <div class="card">
@@ -248,6 +248,7 @@
                     </div>
                   </div>
                 </div>
+                <!-- Ellipse -->
                 <div class="col-md-4 g-3">
                   <div class="card">
                     <img
@@ -296,7 +297,7 @@
                 <h3 class="mt-3">Area Calculation</h3>
                 <hr class="border border-danger border-1 opacity-50 mx-3" />
                 <div>
-                  <p id="triangel-area-show" class="text-start ps-3">
+                  <p id="triangel-area-show" class="text-start ps-3 py-3">
                     1. Triangel Area of =
                     <span id="triangel-area"></span> cm<sup>2</sup>
                     <button class="btn btn-primary ms-2">
