all function re-use added

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             type="text"
                             name=""
                             id="pInputField-pentagon"
-                            placeholder="w"
+                            placeholder="p"
                           />
                           <label for="">cm</label>
                         </div>
@@ -237,7 +237,7 @@
                             type="text"
                             name=""
                             id="bInputField-pentagon"
-                            placeholder="l"
+                            placeholder="b"
                           />
                           <label for="">cm</label>
                         </div>
