--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="accordion mt-5 w-75 mx-auto" id="accordionExample">
+        <div class="accordion mt-5 w-md-75 mx-auto" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button fw-bold fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -20,7 +20,7 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body fs-5">
-                  <strong>DOM stands of Document Object Model.</strong> It is a tree-like structure that represents the HTML document. It is used by JavaScript to access and manipulate the document. <br>
+                  <strong>DOM stands of Document Object Model.</strong> It is webpage programming interface and a tree-like structure that represents the HTML document. It is used by JavaScript to access and manipulate the document. <br>
                   it's makes the html document interactive and html document manipulation and maintenance.
                 </div>
               </div>
@@ -57,8 +57,8 @@
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <div class="accordion-body fs-5">
+                  HTML contains different types of elements that are placed one after the other inside the parent tag. When an event occurs, the event tag rises above the parent tag and the parent tag above the parent tag rises slowly like a bubble. This event is called Event Bubble.
                 </div>
               </div>
             </div>
@@ -69,8 +69,8 @@
                   </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <div class="accordion-body fs-5">
+                    When a function is passed or used as an argument to another function, it is called a callback function. Since JavaScript function is basically an object, we can use functions like objects. Each can be called by declaring one inside the other.
                   </div>
                 </div>
               </div>
